Use a filled/unfilled icon instead of colour to denote favorites

https://bugzilla.gnome.org/show_bug.cgi?id=751106